# mflib

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  README.md  create_html_doc.sh  create_pdf_doc.sh  create_release.sh  create_release_setup_tools.sh  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  core.rst  index.rst  mf_timestamp.rst  mflib.rst  overview.md  owl.rst  owl_data.rst
docs/source/_static/: placeholder
mflib/: __init__.py  core.py  data_transfer.py  mf_timestamp.py  mflib.py  mflib_version.py  mfvis.py  owl.py  owl_data.py
