[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "fabrictestbed-mflib"
license = {file = "LICENSE"}
authors = [ 
  { name="Carpenter", email="csacarp0@g.uky.edu"},
  { name="Song"}, 
  { name="Pinyi"}, 
  { name="Hussam"},
]

readme = "README.md"
requires-python = ">=3.9"  
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.flit.module]
name = "mflib"

[project.urls]
"Homepage" = "https://github.com/fabric-testbed/mflib"

[testpypi]
repository = "https://test.pypi.org/legacy/"

[pypi]
repository = "https://upload.pypi.org/legacy/"
